# MLP_in_analog_circuit

./: .pre-commit-config.yaml  README.md  pyproject.toml
latex/: .gitignore  main.tex
model/: .gitignore  nand.py
model/mlp_in_keras/: converter.py  explore_n_classes.py  mlp_in_keras.py  mlp_in_keras_bmnist.py  trainer.py
model/nand/: eval_nand_by_sigmoid_ste.py  nand.py  nand_infer.py
model/xor/: layer.py  main.py  neuralnetwork.py  neuron.py
