[project]
name = "neural-network-with-analog-circuits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.4",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
    "tensorflow>=2.20.0",
]

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
#    "D", # pydocstyle
]
ignore = []
# 1行の最大文字数
line-length = 100

extend-ignore = [
    "D100", # missing-docstring
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415" # ends-in-punctuation
]

[tool.ruff.lint.pydocstyle]
# docstringはgoogle style
convention = "google"

[tool.ruff.per-file-ignores]
# 個別設定
# __init__.pyは未使用インポートを許容
"__init__.py" = ["F401"]

